# CoreBalance-Advanced-Multi-Core-Simulator

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_START.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  QUICKSTART.md  README.md  RENDER.md  build.sh  docker-compose.yml  setup-docker.sh  start.sh  test-api.html
api/: package-lock.json  package.json  server.js
cpp/: CMakeLists.txt
cpp/src/: DualCoreFCFS.cpp  DualCoreFCFS.h  DualCorePriority.cpp  DualCorePriority.h  DualCoreRoundRobin.cpp  DualCoreRoundRobin.h  DualCoreSJF.cpp  DualCoreSJF.h  DualCoreScheduler.cpp  DualCoreScheduler.h  FCFS.cpp  FCFS.h  Priority.cpp  Priority.h  Process.cpp  Process.h  ProcessGenerator.cpp  ProcessGenerator.h  RoundRobin.cpp  RoundRobin.h  SJF.cpp  SJF.h  Scheduler.cpp  Scheduler.h  dualcore_main.cpp  generator_main.cpp  main.cpp
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/simulator/: page.tsx
frontend/components/: AlgorithmExplain.tsx  AlgorithmSelector.tsx  CPUUtilizationChart.tsx  ComparisonTable.tsx  ComparisonView.tsx  DualCoreGanttChart.tsx  GanttChart.tsx  IOOperationsSimulation.tsx  MemoryGauge.tsx  MetricsTable.tsx  PriorityAgingVisualization.tsx  ProcessInput.tsx  RandomDataGenerator.tsx  SimulationControls.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/public/: app-fallback.css
frontend/types/: index.ts
